2009-04-15  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/CMakeLists.txt: 
	- don't link plugins to spark libraries to prevent segfault on Linux
	
	* lib/oxygen/simulationserver/simulationserver.cpp (UpdateDeltaTimeAfterStep):
	- Skipping remaining time error is now a debug warning message 

2009-03-17  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/kerosin/imageserver/imageserver.h (ImageServer): 
	- added a fix for the latest DevIL package
	
	* lib/zeitgeist/scriptserver/rubywrapper.cpp: 
	- improved ruby 1.9 compatibility

2009-03-07  Hedayat Vatankhah  <hedayat@grad.com>

	* test/scenetest/CMakeLists.txt: 
	- exclude from build in Windows
	
	* test/CMakeLists.txt: 
	* plugin/CMakeLists.txt: 
	- fixed for Windows compatibility
	- add Boost library dir to link directories
	
	* cmake/FindODE.cmake: 
	- add search paths for latest ode release (ode-0.11)
	
	* plugin/filesystemzip/CMakeLists.txt: 
	- build only if zlib is available
	
	* spark/CMakeLists.txt: 
	* lib/zeitgeist/CMakeLists.txt: 
	* lib/salt/CMakeLists.txt: 
	* lib/oxygen/CMakeLists.txt: 
	* lib/kerosin/CMakeLists.txt: 
	* utility/tinyxml/CMakeLists.txt: 
	* utility/rcssnet/CMakeLists.txt: 
	* CMakeLists.txt: 
	- Do not build shared libraries on windows for now

2009-02-17  Marian Buchta  <marian.buchta@gmail.com>

	* CMakeLists.txt
	- add CRT_SECURE_NO_WARNINGS
	- add include directories for Windows platform
		
	* lib/kerosin/CMakeLists.txt
	* plugin/filesystemzip/CMakeLists.txt
	* plugin/imageperceptor/CMakeLists.txt
	* plugin/openglsyssdl/CMakeLists.txt
	* plugin/rosimporter/CMakeLists.txt
	* spark/CMakeLists.txt
	* test/fonttest/CMakeLists.txt
	* test/inputtest/CMakeLists.txt
	* test/scenetest/CMakeLists.txt
	* utility/rcssnet/CMakeLists.txt
	- add include directories for Windows platform
	
	* windows/include/GL/glext.h
	* windows/include/GL/glxext.h
	* windows/include/GL/wglext.h
	- add missing headers files (OpenGL Extension Registry)

2009-02-15  Marian Buchta  <marian.buchta@gmail.com>
